added info about the app

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,6 @@
 <div class="container my-5">
     <h2>Find your E-car</h2>
     <p>Empower Your Journey: Drive the Future with Eco-Friendly E-Car Rentals!</p>
-
-
   <div class="row">
     <div class="col-12 col-lg-4">
       <div class="card" style="width: 18rem;">
@@ -35,16 +33,16 @@
       </div>
     </div>
   </div>
+</div>
 
-  <div class="info">
-    <div class="about-us my-4 py-4 text-center text-md-left d-flex justify-content-end">
-      <p>Rent an electric car for your next adventure</p>
-      <img src="https://images.pexels.com/photos/21014/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600" alt="person holding a map in a car" >
-    </div>
+<div class="info">
+  <div class="about-us my-4 py-4 text-center text-md-left d-flex justify-content-end align-items-center">
+    <p class="text-center px-4">Rent an electric car for your next adventure</p>
+    <img src="https://images.pexels.com/photos/21014/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600" alt="person holding a map in a car">
+  </div>
 
-    <div class="about-us my-4 py-4 text-center text-md-right d-flex justify-content-start">
-      <img src="https://images.pexels.com/photos/11456549/pexels-photo-11456549.jpeg?auto=compress&cs=tinysrgb&w=600" alt="a blue mercedes">
-      <p>Become a host and rent your car out</p>
-    </div>
+  <div class="about-us text-center text-md-right d-flex justify-content-start align-items-center">
+    <img src="https://images.pexels.com/photos/11456549/pexels-photo-11456549.jpeg?auto=compress&cs=tinysrgb&w=600" alt="a blue mercedes">
+    <p class="text-center px-4">Become a host and rent your car out</p>
   </div>
 </div>
