added some extra styling to the footer

--- a/app/assets/stylesheets/components/_front_page.scss
+++ b/app/assets/stylesheets/components/_front_page.scss
@@ -7,9 +7,10 @@
 }
 
 .about-us img {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
+  box-shadow: 2px 1px 1px rgba(128, 128, 128, 0.822);
 }
 
 .info {
