--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid mx-3">
     <a class="navbar-brand" href="#">
       <i class="fa-solid fa-car-rear"></i>
-      Ride my E-car
+      Ride my e-car
     </a>
 
     <div class="collapse navbar-collapse">
