--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 <div class="container my-5">
     <h2>Find your E-car</h2>
     <p>Empower Your Journey: Drive the Future with Eco-Friendly E-Car Rentals!</p>
-  <div class="row">
+  <div class="row my-4 py-2">
     <div class="col-12 col-lg-4">
       <div class="card" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1494976388531-d1058494cdd8?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top img-fluid" alt="...">
@@ -19,7 +19,7 @@
       <div class="card" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1541443131876-44b03de101c5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGNhcnxlbnwwfHwwfHx8MA%3D%3D" class="card-img-top img-fluid" alt="...">
         <div class="card-body">
-          <p class="card-text">Car</p>
+          <p class="card-text">BMW</p>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
       <div class="card" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1541899481282-d53bffe3c35d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGNhcnxlbnwwfDB8MHx8fDA%3D" class="card-img-top img-fluid" alt="...">
         <div class="card-body">
-          <p class="card-text">Car</p>
+          <p class="card-text">Volkswagen</p>
         </div>
       </div>
     </div>
