--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer py-4 mt-4">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
