--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,10 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+
+    <%= f.input :avatar, as: :file %>
+
+
     <%= f.input :first_name,
                 required: true,
                 autofocus: true,
@@ -12,6 +16,10 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "last_name" }%>
+    <%= f.input :postcode,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "postcode" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
