--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,11 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "https://res.cloudinary.com/djqkw5dd4/image/upload/v1709049954/power-supply_bgdbpz.png" %>
     <% end %>
-    <h1>Ride my e-car</h1>
+    <div class="d-flex justify-content-center">
+      <h1> <%= link_to "Ride my e-car", root_path, class: "black-link" %> </h1>
+    </div>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,11 +22,13 @@
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <% if current_user.avatar.attached? %>
-              <%= cl_image_tag current_user.avatar.key, class: "avatar", alt: "dropdown menu" %>
-            <% else %>
-              <%= image_tag "https://res.cloudinary.com/djqkw5dd4/image/upload/v1709047309/user_xgox50.png", class: "avatar" %>
-            <% end %>
+            <div class="m-1">
+              <% if current_user.avatar.attached? %>
+                <%= cl_image_tag current_user.avatar.key, class: "avatar", alt: "dropdown menu" %>
+              <% else %>
+                <%= image_tag "https://res.cloudinary.com/djqkw5dd4/image/upload/v1709047309/user_xgox50.png", class: "avatar" %>
+              <% end %>
+            </div>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Profile", edit_user_registration_path, class: "dropdown-item" %>
