--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,3 +1,55 @@
-<h1>Car Show Page</h1>
 
-<p><%= @car.make %> --- <%= @car.model %> --- <%= @car.year %></p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner img-fluid img-thumbnail">
+    <div class="carousel-item active">
+      <img class="d-block mx-auto w-500" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/13C12/production/_118941908_electric-car1.jpg" alt="First slide">
+    </div>
+      <div class="carousel-item img-fluid img-thumbnail">
+        <img class="d-block mx-auto w-500" src="https://i.guim.co.uk/img/media/7d5dfcdf7a70afe5273fa65590fdb99fdcda1a97/0_89_3000_1800/master/3000.jpg?width=1200&quality=85&auto=format&fit=max&s=d9a6fc098390afea29a96f4c59da2adc" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block mx-auto w-500 img-fluid img-thumbnail" src="https://fuelincluded.com/wp-content/uploads/2017/01/Heroshot_Renault_ZOE_JFitch.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<div class="card mb-3">
+<div class="card-body">
+ <h2 class="card-title"><%="#{@car.make} #{@car.model}" %> </h2>
+  <ul class="car-list">
+    <li> <%= @car.year %> </li>
+    <li>£<%= @car.price %> </li>
+    <li> <%= @car.category%></li>
+    <li> <%= @car.location%></li>
+    <li> <%= @car.seats%></li>
+  </ul>
+</div>
+
+<div>
+  <ul class="book-page-toggle">
+    <h3>book now:</h3>
+  <div>
+    <%= form.label :start_date, 'Start Date' %>
+    <%= form.date_field :start_date %>
+  </div>
+  <div>
+    <%= form.label :end_date, 'End Date' %>
+    <%= form.date_field :end_date %>
+  </div>
+  <div>
+    <%= form.submit 'Book Car' %>
+  </div>
+<% end %>
+</div>``
