--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <h1>Your upcoming booking(s)</h1>
+<div class="container mt-3">
+  <h1><i class="fa-solid fa-car"></i> Your e-rides</h1>
 
   <br>
   <ul>
