--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,26 +1,39 @@
-<div class="container">
+<div class="container mt-3 p-3 mb-2 bg-light text-dark">
 
-  <h1>You have booked:</h1>
+  <h1><i class="fa-solid fa-car"></i> Your e-rides</h1>
 
   <br>
+    <div class="card border border-dark border-2 rounded-2 shadow p-3 mb-5 bg-body rounded" style="width: 30rem;">
+      <img src="https://www.lincoln.com/is/image/content/dam/brand_lincoln/en_us/brand/dm/mkz-sunset/MKZ_1Up.tif?croppathe=1_3x2&wid=900" class="card-img-top" alt="...">
+      <div class="card-body">
 
-  <p>£<%= @booking.car.price %>/day</p>
-  <p>📍<%= @booking.car.location.capitalize %></p>
-  <p><strong>Category:</strong> <%= @booking.car.category.capitalize %></p>
-  <p><%= @booking.car.seats %> seats </p>
+        <div class="d-flex justify-content-between text-align-center">
+          <h3 class="card-title"><strong><%= @booking.car.model.capitalize %></strong> </h3>
+          <h5 class="mt-1">📍<%= @booking.car.location.capitalize %></h5>
+        </div>
 
-  <p><strong>Start: </strong><%= @booking.start_date.strftime('%m/%d/%Y') %></p>
-  <p><strong>End: </strong><%= @booking.end_date.strftime('%m/%d/%Y') %></p>
+          <p>🚘 <%= @booking.car.category.capitalize %></p>
+          <p>💺 <%= @booking.car.seats %></p>
+          <p>👉🏼 <%= @booking.car.price %>/day</p>
 
-  <% start = @booking.start_date.strftime('%m/%d/%Y').to_i %>
-  <% end_date = @booking.end_date.strftime('%m/%d/%Y').to_i%>
-  <p><strong>Days:</strong> <%= end_date - start %> </p>
-  <p><strong>Total: </strong> £<%= (end_date - start) * @booking.car.price %></p>
+            <p class="card-text">
+              <div class="d-flex justify-content-between pt-3">
+                <p><strong>Start: </strong><%= @booking.start_date.strftime('%d/%m/%Y') %></p>
+                <p><strong>End: </strong><%= @booking.end_date.strftime('%d/%m/%Y') %></p>
+              </div>
+                <% start = @booking.start_date.strftime('%m/%d/%Y').to_i %>
+                <% end_date = @booking.end_date.strftime('%m/%d/%Y').to_i%>
+                <p><strong>Days:</strong> <%= end_date - start %> </p>
+                <p><strong>Total: </strong> £<%= (end_date - start) * @booking.car.price %></p>
+            </p>
+            </div>
+      </div>
 
+
+  <div class="btn btn-dark"><%= link_to 'Back', bookings_path, class:"text-decoration-none text-light" %></div>
+
+</div>
 
   <%# no need for edit and cancel for this project %>
   <%# <%= link_to 'Edit', edit_booking_path %>
   <%# <%= link_to 'Cancel', booking_path, method: :delete, data: { confirm: 'Are you sure?' } %>
-  <%= link_to 'Back', bookings_path %>
-
-</div>
