--- a/app/assets/stylesheets/components/_front_page.scss
+++ b/app/assets/stylesheets/components/_front_page.scss
@@ -1,5 +1,5 @@
 .container {
-  text-align: center;
+  // text-align: center;
 }
 
 .card {
@@ -13,7 +13,7 @@
   box-shadow: 2px 1px 1px rgba(128, 128, 128, 0.822);
 }
 
-.info {
+.front-page-info {
   width: 50%;
   display: flex;
   flex-direction: column;
