--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <img src="https://images.unsplash.com/photo-1593941707874-ef25b8b4a92b?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="An electric car being charged">
 </div>
 
-<div class="container my-5">
+<div class="container text-center my-5">
     <h2>Find your E-car</h2>
     <p>Empower Your Journey: Drive the Future with Eco-Friendly E-Car Rentals!</p>
   <div class="row my-4 py-2">
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<div class="info">
+<div class="front-page-info">
   <div class="about-us my-4 py-4 text-center text-md-left d-flex justify-content-end align-items-center">
     <p class="text-center px-4">Rent an electric car for your next adventure</p>
     <img src="https://images.pexels.com/photos/21014/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600" alt="person holding a map in a car">
