--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<div class="container w-50 p-3 mx-auto" >
+
+  <h3><strong><i class="fa-solid fa-car"></i> Select date</strong></h3>
+  <br>
+    <%= simple_form_for [@car, @booking] do |f|%>
+    <%= f.input :start_date, html5: true %>
+    <%= f.input :end_date, html5: true  %>
+    <br>
+    <%= f.submit class: "btn btn-dark btn-lg btn-block" %>
+    <% end %>
+
+</div>
