--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container card mb-3 shadow p-3" >
   <div class="d-flex g-0">
     <div class="col-md-5">
-      <img src="https://i.guim.co.uk/img/media/7d5dfcdf7a70afe5273fa65590fdb99fdcda1a97/0_89_3000_1800/master/3000.jpg?width=1200&quality=85&auto=format&fit=max&s=d9a6fc098390afea29a96f4c59da2adc" class="img-fluid float-start" alt="...">
+      <%= image_tag @car.image_url, class: "img-fluid float-start", alt: "..." %>
     </div>
     <div class="col-md-6">
       <div class="card-body margin-left:100px;">
