--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -21,10 +21,9 @@
                 <p><strong>Start: </strong><%= @booking.start_date.strftime('%d/%m/%Y') %></p>
                 <p><strong>End: </strong><%= @booking.end_date.strftime('%d/%m/%Y') %></p>
               </div>
-                <% start = @booking.start_date.strftime('%m/%d/%Y').to_i %>
-                <% end_date = @booking.end_date.strftime('%m/%d/%Y').to_i%>
-                <p><strong>Days:</strong> <%= end_date - start %> </p>
-                <p><strong>Total: </strong> £<%= (end_date - start) * @booking.car.price %></p>
+
+                <p><strong>Days:</strong> <%= @booking_duration.to_i %> </p>
+                <p><strong>Total: </strong> £<%= @booking_duration * @booking.car.price %></p>
             </p>
             </div>
       </div>
