--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -4,9 +4,9 @@
 <div class="container text-center">
   <div class="row d-flex">
     <% @cars.each do |car| %>
-      <div class="col-lg-3">
+      <div class="col-lg-3 mb-4">
         <div class="card shadow p-3" style="width: 18rem;">
-          <img src="<%= car.image_url %>" class="card-img-top" alt="...">
+          <%= image_tag car.image_url, class: "card-img-top", style: "height: 9rem; object-fit: cover;" %>
           <div class="card-body">
             <h3 class="card-title"> <%="#{car.make} #{car.model}" %> </h2>
             <ul class="list-unstyled">
