--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -6,7 +6,7 @@
     <% @cars.each do |car| %>
       <div class="col-lg-3 mb-4">
         <div class="card shadow p-3" style="width: 18rem;">
-          <%= image_tag car.image_url, class: "card-img-top", style: "height: 9rem; object-fit: cover;" %>
+          <%# <%= image_tag car.image_url, class: "card-img-top", style: "height: 9rem; object-fit: cover;" %> %>
           <div class="card-body">
             <h3 class="card-title"> <%="#{car.make} #{car.model}" %> </h2>
             <ul class="list-unstyled">
@@ -20,3 +20,8 @@
     <% end %>
   </div>
 </div>
+
+<div style="width: 100%; height: 600px;"
+  data-controller="map"
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
