--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,15 +5,31 @@
 <div class="container text-center my-5">
     <h2>Find your E-car</h2>
     <p>Empower Your Journey: Drive the Future with Eco-Friendly E-Car Rentals!</p>
+
+<div class="row justify-content-center rounded">
+  <div class="col-sm-8 my-3">
+      <%= form_with url: cars_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Search by city"
+          %>
+        <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
+      <% end %>
+  </div>
+</div>
+
   <div class="row my-4 py-2">
     <div class="col-12 col-lg-4">
       <div class="card" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1494976388531-d1058494cdd8?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top img-fluid" alt="...">
         <div class="card-body">
-          <p class="card-text">Porche</p>
+          <p class="card-text">Porsche</p>
         </div>
       </div>
     </div>
+
+
 
     <div class="col-12 col-lg-4">
       <div class="card" style="width: 18rem;">
@@ -35,18 +51,6 @@
   </div>
 </div>
 
-<div class="row justify-content-center">
-  <div class="col-sm-8 my-3">
-      <%= form_with url: cars_path, method: :get, class: "d-flex" do %>
-        <%= text_field_tag :query,
-              params[:query],
-              class: "form-control",
-              placeholder: "Search by city"
-          %>
-        <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
-      <% end %>
-  </div>
-</div>
 
 <div class="front-page-info">
   <div class="about-us my-4 py-4 text-center text-md-left d-flex justify-content-end align-items-center">
