--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="footer py-4 mt-4">
-  <div class="container">
+  <div class="container d-flex justify-content-center">
     <div class="row">
-      <div class="col-md-6">
-        <p>&copy; <%= Time.now.year %> Ride my e-car</p>
-      </div>
+      <%# <div class="col-md-6"> %>
+        <p>&copy; <%= Time.now.year %> Ride My e-Car</p>
+      <%# </div> %>
     </div>
   </div>
 </footer>
