--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,11 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon justify-content-evenly">
   <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "https://res.cloudinary.com/djqkw5dd4/image/upload/v1709049954/power-supply_bgdbpz.png", style: "height: 20px;" %>
-    <% end %>
-    <div class="d-flex justify-content-center">
-      <h1> <%= link_to "Ride my e-car", root_path, class: "black-link" %> </h1>
-    </div>
+    <%# <%= link_to root_path, class: "navbar-brand" do %>
+      <%# <%= image_tag "https://res.cloudinary.com/djqkw5dd4/image/upload/v1709049954/power-supply_bgdbpz.png", style: "height: 20px;" %>
+    <%# <% end %>
+    <%# <div class="d-flex justify-content-center"> %>
+      <h1 class="mb-4 display-3"> <strong><%= link_to "Ride My e-Car", root_path, class: "black-link" %></strong> </h1>
+    <%# </div> %>
 
       <ul class="navbar-nav">
         <% if user_signed_in? %>
