--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,3 +1,11 @@
 body {
   background-color: black;
 }
+
+.car-img  {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  object-position: center;
+
+}
