added reviews to show page

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -65,3 +65,12 @@
           </div>
   </div>
 </div>
+
+<div class="container">
+  <h1>Add a review</h1>
+  <%= simple_form_for [@car, @review] do |f|%>
+  <%= f.input :comment %>
+  <%= f.input :rating, collection: 1..5 %>
+  <%= f.button :submit %>
+  <% end %>
+</div>
