--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,7 +1,24 @@
 <div class="container">
+  <div class="row justify-content-center rounded">
+  <div class="col-sm-8 my-3">
+      <%= form_with url: cars_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Search by make, model or location"
+          %>
+        <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
+      <% end %>
+  </div>
+</div>
   <div class="row">
     <div class="col-lg-8">
       <div class="row">
+        <% if @cars.count == 0 %>
+          <div class="col-lg-12">
+            <h3 class="text-center">No cars found</h3>
+          </div>
+        <% end %>
         <% @cars.each do |car| %>
           <div class="col-lg-4 mb-4">
             <div class="card shadow p-3">
