--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
         <%= text_field_tag :query,
               params[:query],
               class: "form-control",
-              placeholder: "Search by city"
+              placeholder: "Search by make, model or location"
           %>
         <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
       <% end %>
