--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,2 +1,20 @@
-<h1>Cars#new</h1>
-<p>Find me in app/views/cars/new.html.erb</p>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-6 offset-lg-3">
+      <div class="bg-white rounded p-3 shadow">
+        <h3>Add your car to our app <%= @car.model %></h3>
+        <%= simple_form_for [@car] do |f| %>
+          <%= f.input :make %>
+          <%= f.input :model%>
+          <%= f.input :seats%>
+          <%= f.input :year%>
+          <%= f.input :category%>
+          <%= f.input :photo, as: :file %>
+          <%= f.input :price%>
+          <%= f.input :location%>
+          <%= f.submit class: "btn btn-flat" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
