--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,33 +1,63 @@
-
-<div class="container card mb-3 shadow p-3" >
+<div class="container card mb-3 shadow p-3">
   <div class="row">
+
     <div class="col-md-8">
-      <%= image_tag @car.image_url, class: "float-start car-img", alt: "..." %>
-    </div>
-    <div class="col-md-4">
-      <div class='d-flex flex-column justify-content-between h-100'>
-        <div>
-          <h2 class="card-title"><%="#{@car.make} #{@car.model}" %> </h2>
-          <h4 class="mb-5"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.capitalize %> </h4>
-          <div class="d-flex align-items-end justify-content-start w-100">
-            <div class="me-5">
-              <p><i class="fa-solid fa-car"> </i> <%= @car.category.capitalize %> </p>
-              <p><i class="fa-solid fa-chair"> </i> <%= @car.seats %> </p>
-            </div>
-            <div>
-              <p> <i class="fa-solid fa-money-bill"></i>  £<%= @car.price %>/day</p>
-              <p><i class="fa-solid fa-calendar-days"></i>    <%= @car.year %></p>
-            </div>
+      <%# <%= image_tag @car.image_url, class: "float-start car-img", alt: "..." %>
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <%= image_tag("#{@car.image_url}", alt: "...", class: "d-block w-100 float-start car-img") %>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("#{@car.image_url}", alt: "...", class: "d-block w-100 float-start car-img") %>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("#{@car.image_url}", alt: "...", class: "d-block w-100 float-start car-img") %>
           </div>
         </div>
-        <div class="border border-black p-3 rounded">
-          <%= simple_form_for [@car, @booking] do |f|%>
-            <%= f.input :start_date, html5: true %>
-            <%= f.input :end_date, html5: true  %>
-            <%= f.submit class: "btn btn-dark btn-md btn-block" %>
-          <% end %>
-        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
+
+      <div class="col-md-4">
+        <div class='d-flex flex-column justify-content-between h-100'>
+          <div>
+            <h2 class="card-title"><%="#{@car.make} #{@car.model}" %> </h2>
+            <h4 class="mb-5"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.capitalize %> </h4>
+              <div class="d-flex align-items-end justify-content-start w-100 ">
+
+                <div class="me-5">
+                  <p><i class="fa-solid fa-car"> </i> <%= @car.category.capitalize %> </p>
+                  <p><i class="fa-solid fa-chair"> </i> <%= @car.seats %> </p>
+                </div>
+
+                <div>
+                  <p> <i class="fa-solid fa-money-bill"></i>  £<%= @car.price %>/day</p>
+                  <p><i class="fa-solid fa-calendar-days"></i>    <%= @car.year %></p>
+                </div>
+
+              </div>
+          </div>
+
+          <div class="border border-black p-3 rounded">
+            <%= simple_form_for [@car, @booking] do |f|%>
+              <%= f.input :start_date, html5: true %>
+              <%= f.input :end_date, html5: true  %>
+              <%= f.submit class: "btn btn-dark btn-md btn-block" %>
+            <% end %>
+          </div>
+
+        </div>
+      </div>
+
   </div>
 </div>
