Attempted to change colour of input field. Didn't complete.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <p>Empower Your Journey: Drive the Future with Eco-Friendly E-Car Rentals!</p>
 
 <div class="row justify-content-center rounded">
-  <div class="col-sm-8 my-3">
+  <div id="form-input" class="col-sm-8 my-3">
       <%= form_with url: cars_path, method: :get, class: "d-flex" do %>
         <%= text_field_tag :query,
               params[:query],
