--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -4,23 +4,25 @@
     <div class="col-md-8">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <% if @car.image_url %>
-            <%= image_tag @car.image_url, class: "car-img" %>
+          <div class="carousel-item active justify-content-center">
+            <% if @car.photo %>
+            <div class="car-image d-flex align-items-center justify-content-center">
+              <%= cl_image_tag @car.photo.key, :height => 400, :crop => "pad" %>
+            </div>
             <% else %>
             <%= image_tag("default_img.jpeg") %>
             <% end %>
           </div>
           <div class="carousel-item">
-            <% if @car.image_url %>
-            <%= image_tag @car.image_url, class: "car-img" %>
+            <% if @car.photo %>
+            <%= cl_image_tag @car.photo.key, height: 400, crop: :fill %>
             <% else %>
             <%= image_tag("default_img.jpeg") %>
             <% end %>
           </div>
           <div class="carousel-item">
-            <% if @car.image_url %>
-            <%= image_tag @car.image_url, class: "car-img" %>
+            <% if @car.photo %>
+            <%= cl_image_tag @car.photo.key, height: 400, crop: :fill %>
             <% else %>
             <%= image_tag("default_img.jpeg") %>
             <% end %>
@@ -35,6 +37,13 @@
           <span class="visually-hidden">Next</span>
         </a>
       </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <button class="btn btn-dark">
+        <%= link_to "Edit car", edit_car_path, class: "text-white text-decoration-none" %>
+      </button>
     </div>
     <div class="col-md-4">
       <div class='d-flex flex-column justify-content-between h-100'>
@@ -61,7 +70,7 @@
         </div>
       </div>
     </div>
-              </div>
-          </div>
+  </div>
+  </div>
   </div>
 </div>
