--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,50 +1,52 @@
-<div class="banner">
+<div class="banner mb-3">
+<div class="image mb-5" style="height: 20px">
   <img src="https://images.unsplash.com/photo-1593941707874-ef25b8b4a92b?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="An electric car being charged">
+</div>
 </div>
 
 <div class="container text-center my-5">
-    <h2>Find your E-car</h2>
-    <p>Empower Your Journey: Drive the Future with Eco-Friendly E-Car Rentals!</p>
+    <h2>Find your e-Car</h2>
+    <br>
+    <br>
+    <p style="color:white">Empower Your Journey: Drive the future with Eco-Friendly e-Car Rentals!</p>
 
-<div class="row justify-content-center rounded">
-  <div class="col-sm-8 my-3">
-      <%= form_with url: cars_path, method: :get, class: "d-flex" do %>
+<div class="row justify-content-center rounded pt-3">
+  <div class="col-sm-8 my-3 pb-4">
+      <%= form_with url: cars_path, method: :get, class: "d-flex justify-content-between" do %>
         <%= text_field_tag :query,
               params[:query],
-              class: "form-control",
+              class: "form-control m-1",
               placeholder: "Search by make, model or location"
           %>
-        <%= submit_tag "Search", name: "", class: "btn btn-dark" %>
+        <%= submit_tag "Search", name: "", class: "btn btn-light m-1" %>
       <% end %>
   </div>
 </div>
 
-  <div class="row my-4 py-2">
+  <div class="row m-5 pt-3 ">
     <div class="col-12 col-lg-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 22rem;">
         <img src="https://images.unsplash.com/photo-1494976388531-d1058494cdd8?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top img-fluid" alt="...">
         <div class="card-body">
-          <p class="card-text">Porsche</p>
+          <p class="card-text"><strong>Porsche</strong></p>
         </div>
       </div>
     </div>
 
-
-
     <div class="col-12 col-lg-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 22rem;">
         <img src="https://images.unsplash.com/photo-1541443131876-44b03de101c5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGNhcnxlbnwwfHwwfHx8MA%3D%3D" class="card-img-top img-fluid" alt="...">
         <div class="card-body">
-          <p class="card-text">BMW</p>
+          <p class="card-text"><strong>BMW</strong></p>
         </div>
       </div>
     </div>
 
     <div class="col-12 col-lg-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 22rem;">
         <img src="https://images.unsplash.com/photo-1541899481282-d53bffe3c35d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGNhcnxlbnwwfDB8MHx8fDA%3D" class="card-img-top img-fluid" alt="...">
         <div class="card-body">
-          <p class="card-text">Volkswagen</p>
+          <p class="card-text"><strong>Volkswagen</strong></p>
         </div>
       </div>
     </div>
@@ -53,13 +55,13 @@
 
 
 <div class="front-page-info">
-  <div class="about-us my-4 py-4 text-center text-md-left d-flex justify-content-end align-items-center">
-    <p class="text-center px-4">Rent an electric car for your next adventure</p>
-    <img src="https://images.pexels.com/photos/21014/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=600" alt="person holding a map in a car">
+  <div class="about-us my-2 text-center text-md-left d-flex justify-content-end align-items-center">
+    <p class="text-center px-3">Rent an electric car for your next adventure</p>
+    <img src="https://images.pexels.com/photos/21014/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=800" alt="person holding a map in a car">
   </div>
 
   <div class="about-us text-center text-md-right d-flex justify-content-start align-items-center">
-    <img src="https://images.pexels.com/photos/11456549/pexels-photo-11456549.jpeg?auto=compress&cs=tinysrgb&w=600" alt="a blue mercedes">
+    <img src="https://images.pexels.com/photos/11456549/pexels-photo-11456549.jpeg?auto=compress&cs=tinysrgb&w=800" alt="a blue mercedes">
     <p class="text-center px-4">Become a host and rent your car out</p>
   </div>
 </div>
