--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -4,33 +4,19 @@
     <div class="col-md-8">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active justify-content-center">
-            <% if @car.photo %>
-              <div class="car-image d-flex align-items-center justify-content-center">
-                <%= cl_image_tag @car.photo.key, :height => 400, :crop => "pad" %>
+          <% if @car.photos.attached? %>
+            <% @car.photos.each_with_index do |photo, index| %>
+              <div class="carousel-item <%= 'active' if index == 0 %> justify-content-center">
+                <div class="car-image d-flex align-items-center justify-content-center">
+                  <%= cl_image_tag photo.key, :height => 400, :crop => "pad" %>
+                </div>
               </div>
-            <% else %>
-            <%= image_tag("default_img.jpeg") %>
             <% end %>
-          </div>
-          <div class="carousel-item active justify-content-center">
-            <% if @car.photo %>
-            <div class="car-image d-flex align-items-center justify-content-center">
-              <%= cl_image_tag @car.photo.key, :height => 400, :crop => "pad" %>
+          <% else %>
+            <div class="carousel-item active justify-content-center">
+              <%= image_tag("default_img.jpeg") %>
             </div>
-            <% else %>
-            <%= image_tag("default_img.jpeg") %>
-            <% end %>
-          </div>
-          <div class="carousel-item active justify-content-center">
-            <% if @car.photo %>
-            <div class="car-image d-flex align-items-center justify-content-center">
-              <%= cl_image_tag @car.photo.key, :height => 400, :crop => "pad" %>
-            </div>
-            <% else %>
-            <%= image_tag("default_img.jpeg") %>
-            <% end %>
-          </div>
+          <% end %>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -53,7 +39,7 @@
       <div class='d-flex flex-column justify-content-center h-100'>
         <div>
           <h2 class="card-title"><%="#{@car.make} #{@car.model}" %> </h2>
-          <h4 class="mb-5"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.capitalize %> </h4>
+          <h4 class="mb-5"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.upcase %> </h4>
           <div class="d-flex align-items-end justify-content-start w-100">
             <div class="me-5 pt-5">
               <p><i class="fa-solid fa-car"> </i> <%= @car.category.capitalize %> </p>
