--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container p-5 border border-dark border-3">
-  <h1><i class="fa-solid fa-car"></i> Your e-rides</h1>
+<div class="container mt-3 p-5 border border-dark border-3">
+  <h1><i class="fa-solid fa-car"></i> Your e-Rides</h1>
 
   <br>
 <ul class="list-unstyled">
