CTA buttons have a btn-primary class

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container text-center my-5">
-    <h2>Find your e-Car</h2>
+    <h2 id="home">Find your e-Car</h2>
     <br>
     <br>
     <p style="color:white">Empower Your Journey: Drive the future with Eco-Friendly e-Car Rentals!</p>
