--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5 w-25">
 
-  <h2>Sign up</h2>
+  <h1>Sign up</h1>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
@@ -36,10 +36,11 @@
     </div>
 
     <div class="form-actions btn btn-primary">
-      <%= f.button :submit, "Sign up" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
     </div>
   <% end %>
 
+  <br>
   <%= render "devise/shared/links" %>
 
 </div>
