Defaults to single image now

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -14,7 +14,7 @@
             <% end %>
           <% else %>
             <div class="carousel-item active justify-content-center">
-              <%= image_tag("default_img.jpeg") %>
+              <%= image_tag(@car.image_url, :class => "car-img") %>
             </div>
           <% end %>
         </div>
