--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -24,8 +24,8 @@
             <div class="card shadow justify-content-center">
               <% if car.photos.attached? %>
                 <%= cl_image_tag(car.photos.first.key, :height => 300, :crop => :fit, :class => "card-img-top") %>
-                <% else %>
-              <%= image_tag("default_img.jpeg") %>
+              <% else %>
+              <%= image_tag(car.image_url, :class => "card-img-top") %>
               <% end %>
               <div class="card-body mx-auto p-3 justify-content-center">
                 <h4 class="card-title"> <%="#{car.make} #{car.model}" %> </h4 >
